<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_background"
    tools:context=".MainActivity3">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="#ae6ce0"
        android:gravity="center"
        android:text="@string/adicionar_rem_dio2"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="160dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/nome_do_rem_dio"
        android:textColor="#ACBADF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="211dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"

        android:inputType="textPersonName"
        android:textColor="#ACBADF"
        android:textColorHint="#9d55d4"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/quantidade_p_dia"
        android:textColor="#ACBADF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="211dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dose_di_ria"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#ACBADF"
        android:textColorHint="#9d55d4"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_edition"
        android:text="@string/adicionar_rem_dio"
        android:textColor="#ACBADF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novoIdText1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="#ae6ce0"
        android:gravity="center"
        android:text="@string/remover_rem_dios"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="59dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/nome2"
        android:textColor="#ACBADF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_edition"
        android:text="@string/remover_rem_dio"
        android:textColor="#ACBADF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_medication" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="152dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantos_voc_tem_hoje"
        android:textColor="#ACBADF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="238dp"
        android:layout_height="43dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/n_mero_de_p_lulas"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#ACBADF"
        android:textColorHint="#9d55d4"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="163dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/quantas_p_lulas_vem_na_caixa"
        android:textColor="#ACBADF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/novoIdText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/p_lulas_por_caixa"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#ACBADF"
        android:textColorHint="#9d55d4"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/spinner_medication"
        android:layout_width="306dp"
        android:layout_height="71dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>